Fix Roboto Condense faux bold on iOS Safair

--- a/client/src/css/Card.css
+++ b/client/src/css/Card.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Allison&family=Inter:wght@200;400;700&family=Roboto+Condensed&family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Allison&family=Roboto+Condensed:wght@400;700&family=Roboto:wght@500;900&display=swap');
 
 :root {
   --dark-blue:#1B3C74;
@@ -59,13 +59,14 @@ hr {
 }
 
 #licensify {
-  top: 17.5px;
-  left: 20px;
+  top: 17px;
+  left: 18px;
   z-index: 3;
   
   color: var(--dark-blue);
-  font-family: 'Roboto', sans-serif;
-  font-size: 2.46rem;
+  font-family: 'Roboto Condensed', sans-serif;
+  letter-spacing: 0.05rem;
+  font-size: 2.6rem;
 }
 
 #country {
